# Slurming

./: GEMINI.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
memory/: MEMORY.md
slurming/DecentJob/: metaJob.py
slurming/Slurm/: shellUtils.py
slurming/SlurmJob/: job.py
slurmutils/Slurm/: shellUtils.py  slurm.py
slurmutils/SlurmJob/: job.py
