[tool.poetry]
name = "slurming"
version = "0.2.3a1"
description = ""
authors = ["Yuxiang Luo <yuxiang.lll@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas =[
    {version="^2.2.2",python="^3.9"}
]


[tool.poetry.group.dev.dependencies]
build = "^1.2.1"
yapf = "^0.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
